--- a/booking.html
+++ b/booking.html
@@ -3,36 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <title>Booking</title>
-
 <style>
-/* RESET */
+/* Reset and base styles */
 html, body {
   height: 100%;
   margin: 0;
-}
-* {
-  box-sizing: border-box;
   font-family: Arial, sans-serif;
-}
-body {
   background: #f0f0f0;
 }
 
-.app {
-  min-height: 100vh;
-  background: white;
-  display: flex;
-  flex-direction: column;
+* {
+  box-sizing: border-box;
 }
 
-/* TOPBAR */
+/* App container */
+.app {
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+}
+
+/* Topbar */
 .topbar {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   border-bottom: 3px solid #000;
   padding: 10px 15px;
-  background: white;
+  background: #fff;
 }
 
 .logo {
@@ -69,6 +69,7 @@ body {
   background: #fff;
   display: none;
   min-width: 160px;
+  z-index: 10;
 }
 
 .dropdown:hover .drop-menu {
@@ -90,119 +91,55 @@ body {
   color: black;
 }
 
-/* TITLE BAR */
-.form-title {
-  border-bottom: 2px solid #000;
-  text-align: center;
-  font-weight: bold;
-  padding: 6px;
-  margin: 10px;
-}
-
-/* BOOKING GRID */
-.booking-wrapper {
-  padding: 15px;
-}
-
-.booking-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 260px;
-  gap: 20px;
-}
-
-/*FORM SECTIONS*/
-.form-section {
-  display: grid;
-  grid-template-columns: 130px 1fr;
-  gap: 10px;
-  align-items: center;
-}
-
-.form-section input {
-  padding: 5px;
-  width: 220px;   /* textbox size */
-}
-
-.small {
-  width: 80px;
-}
-
-/* RIGHT PAYMENT BOX */
-.payment-box {
-  border-left: 2px solid #000;
-  padding-left: 15px;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 10px;
-}
-
-.payment-box h4 {
-  margin: 5px 0;
-  text-align: center;
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
-  padding: 4px;
-}
-
-/* ACTION BUTTONS */
-.actions {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  margin: 30px 0;
-}
-
-.actions button {
-  width: 110px;
-  height: 35px;
-  cursor: pointer;
-}
-
+/* Booking body with original column layout */
 .booking-body {
   display: grid;
   grid-template-columns: 1.2fr 1.2fr 0.8fr;
-  padding: 20px;
   column-gap: 25px;
+  padding: 20px;
+  flex: 1;
 }
 
-/* columns */
+/* Columns */
 .col {
   display: flex;
   flex-direction: column;
 }
 
-/* row layout */
+/* Row layout */
 .row {
   display: grid;
   grid-template-columns: 130px 1fr;
   align-items: center;
-  margin-bottom: 12px;   /* normal gap */
+  margin-bottom: 12px;
 }
 
 .row.tight {
-  margin-bottom: 4px;   
+  margin-bottom: 4px;
 }
 
 .row.small-gap {
   margin-bottom: 8px;
 }
 
-/* spacing blocks */
 .big-gap {
-  height: 40px;         
+  height: 40px;
 }
 
-/* inputs */
-input {
-  width: 210px;
+/* Inputs */
+input[type="text"], input[type="number"], input[type="date"] {
   padding: 5px;
+}
+
+input {
+  width: 210px; /* preserve original size */
 }
 
 input.small {
   width: 80px;
 }
 
-/* right side fee box */
+/* Fee box */
 .fee-box {
   border: 2px solid #000;
   padding: 10px;
@@ -217,169 +154,172 @@ input.small {
   margin-bottom: 10px;
 }
 
+/* Actions */
+.actions {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 30px 0;
+}
 
+.actions button {
+  width: 110px;
+  height: 35px;
+  cursor: pointer;
+}
+
+/* Responsive adjustments */
+@media (max-width: 1000px) {
+  .booking-body {
+    grid-template-columns: 1fr;
+  }
+  .row {
+    grid-template-columns: 1fr;
+  }
+  .row label {
+    margin-bottom: 4px;
+  }
+}
 </style>
 </head>
-
 <body>
 <div class="app">
 
-<header class="topbar">
-      <div class="logo">LOGO</div>
-      <nav class="nav">
-        <div class="dropdown">
-          <button class="drop-btn">Employ</button>
-          <div class="drop-menu">
-            <div>Data entry</div>
-            <div>Employ Data</div>
-            <div>Salary slip</div>
-          </div>
+  <!-- Topbar -->
+  <header class="topbar">
+    <div class="logo">LOGO</div>
+    <nav class="nav">
+      <div class="dropdown">
+        <button class="drop-btn">Employ</button>
+        <div class="drop-menu">
+          <div>Data entry</div>
+          <div>Employ Data</div>
+          <div>Salary slip</div>
         </div>
-        <div class="dropdown">
-          <button class="drop-btn">Driver</button>
-          <div class="drop-menu">
-            <div>Data entry</div>
-            <div>Payment slip</div>
-            <div>Driver Data</div>
-          </div>
+      </div>
+      <div class="dropdown">
+        <button class="drop-btn">Driver</button>
+        <div class="drop-menu">
+          <div>Data entry</div>
+          <div>Payment slip</div>
+          <div>Driver Data</div>
         </div>
-
-        <a href="booking.html" class="nav-link">Booking</a>
-        <button>Dispatch</button>
-        <button>Summary</button>
-
-        <div class="dropdown">
-          <button class="drop-btn">Menu</button>
-          <div class="drop-menu right">
-            <div>Booking</div>
-            <div>Dispatch</div>
-            <div>Godown Stock</div>
-            <div>Consignor Data</div>
-            <div>Consignee Data</div>
-          </div>
+      </div>
+      <a href="booking.html" class="nav-link">Booking</a>
+      <button>Dispatch</button>
+      <button>Summary</button>
+      <div class="dropdown">
+        <button class="drop-btn">Menu</button>
+        <div class="drop-menu right">
+          <div>Booking</div>
+          <div>Dispatch</div>
+          <div>Godown Stock</div>
+          <div>Consignor Data</div>
+          <div>Consignee Data</div>
         </div>
-      </nav>
-      <div class="spacer"></div>
-    </header>
+      </div>
+    </nav>
+  </header>
 
-<!-- FORM -->
-<div class="booking-body">
+  <!-- Booking form -->
+  <div class="booking-body">
 
-  <!-- LEFT COLUMN -->
-  <div class="col left">
-    <div class="row">
-      <label>Branch From</label>
-        <input type="text" id="branchFrom" value="" readonly>
+    <!-- Left column -->
+    <div class="col left">
+      <div class="row">
+        <label>Branch From</label>
+        <input type="text" id="branchFrom" readonly>
+      </div>
+      <div class="row small-gap">
+        <label>Branch To</label>
+        <input type="text">
+      </div>
+      <div class="big-gap"></div>
+      <div class="row">
+        <label>B-Pay Mode</label>
+        <input type="text">
+      </div>
+      <div class="row">
+        <label>Sender / C</label>
+        <input type="text">
+      </div>
+      <div class="row">
+        <label>Receiver</label>
+        <input type="text">
+      </div>
+      <div class="row">
+        <label>Content</label>
+        <input type="text">
+      </div>
+      <div class="row">
+        <label>Packages</label>
+        <input type="number" class="small">
+      </div>
+      <div class="row">
+        <label>Weight in KG</label>
+        <input type="number" class="small">
+      </div>
     </div>
 
-    <div class="row small-gap">
-      <label>Branch To</label>
-      <input>
+    <!-- Middle column -->
+    <div class="col middle">
+      <div class="row tight">
+        <label>Pickup From</label>
+        <input type="text">
+      </div>
+      <div class="row tight">
+        <label>Delivery To</label>
+        <input type="text">
+      </div>
+      <div class="big-gap"></div>
+      <div class="row">
+        <label>Mobile No.</label>
+        <input type="text">
+      </div>
+      <div class="row">
+        <label>PKG Detail</label>
+        <input type="text">
+      </div>
     </div>
 
-    <div class="big-gap"></div>
-
-    <div class="row">
-      <label>B-Pay Mode</label>
-      <input>
+    <!-- Right column -->
+    <div class="col right">
+      <div class="row">
+        <label>Date</label>
+        <input type="date" class="small">
+      </div>
+      <div class="row">
+        <label>L. R. No</label>
+        <input type="text">
+      </div>
+      <div class="fee-box">
+        <div class="fee-title">Booking Fee</div>
+        <div class="row">
+          <label>Freight</label>
+          <input type="number" class="small">
+        </div>
+        <div class="row">
+          <label>Door del</label>
+          <input type="number">
+        </div>
+        <div class="row">
+          <label>Total</label>
+          <input type="number">
+        </div>
+      </div>
     </div>
 
-    <div class="row">
-      <label>Sender / C</label>
-      <input>
-    </div>
-
-    <div class="row">
-      <label>Receiver</label>
-      <input>
-    </div>
-
-    <div class="row">
-      <label>Content</label>
-      <input>
-    </div>
-
-    <div class="row">
-      <label>Packages</label>
-      <input class="small">
-    </div>
-
-    <div class="row">
-      <label>Weight in KG</label>
-      <input class="small">
-    </div>
   </div>
 
-  <!-- MIDDLE COLUMN -->
-  <div class="col middle">
-    <div class="row tight">
-      <label>Pickup From</label>
-      <input>
-    </div>
-
-    <div class="row tight">
-      <label>Delivery To</label>
-      <input>
-    </div>
-
-    <div class="big-gap"></div>
-
-    <div class="row">
-      <label>Mobile No.</label>
-      <input>
-    </div>
-
-    <div class="row">
-      <label>PKG Detail</label>
-      <input>
-    </div>
-  </div>
-
-  <!-- RIGHT COLUMN -->
-  <div class="col right">
-    <div class="row">
-      <label>Date</label>
-      <input class="small">
-    </div>
-
-    <div class="row">
-      <label>L. R. No</label>
-      <input>
-    </div>
-
-    <div class="fee-box">
-      <div class="fee-title">Booking Fee</div>
-
-      <div class="row">
-        <label>Freight</label>
-        <input class="small">
-      </div>
-
-      <div class="row">
-        <label>Door del</label>
-        <input>
-      </div>
-
-      <div class="row">
-        <label>Total</label>
-        <input>
-      </div>
-    </div>
+  <!-- Action buttons -->
+  <div class="actions">
+    <button>Add</button>
+    <button>Edit</button>
+    <button>Delete</button>
+    <button>Print</button>
+    <button>Reset</button>
   </div>
 
 </div>
-
-
-<!-- ACTIONS -->
-<div class="actions">
-  <button>Add</button>
-  <button>Edit</button>
-  <button>Delete</button>
-  <button>Print</button>
-  <button>Reset</button>
-</div>
-
-</div>
-  <script src="app.js"></script>
 </body>
 </html>
