Modify input fields and update action buttons

--- a/booking.html
+++ b/booking.html
@@ -113,7 +113,7 @@
       </div>
       <div class="row">
         <label>L. R. No</label>
-        <input type="text" id="lrNo" readonly>
+        <input type="text" id="lrNo">
       </div>
       <div class="fee-box">
         <div class="fee-title">Booking Fee</div>
@@ -136,14 +136,15 @@
 
   <!-- Action buttons -->
   <div class="actions">
-    <button id="btnAdd">Add</button>
+  <button id="btnNew">Add / New</button>
     <button id="btnEdit">Edit</button>
-    <button id="btnDelete">Delete</button>
-    <button id="btnPrint">Print</button>
-    <button id="btnPdf">PDF</button>
     <button id="btnSave">Save</button>
-    <button id="btnReset">Reset</button>
+    <button id="btnDelete">Delete</button>
+    <button id="btnFind">Find</button>
+    <button id="btnPreview">Preview</button>
+    <button id="btnPrint">Print</button>
   </div>
+
 
 
 </div>
