--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="app">
 
     <header class="topbar">
-      <div class="logo">LOGO</div>
+      <div class="logo">RC</div>
       <nav class="nav">
         <div class="dropdown">
           <button class="drop-btn">Employ</button>
@@ -29,7 +29,7 @@
         </div>
 
         <a href="booking.html" class="nav-link">Booking</a>
-        <button>Dispatch</button>
+        <a href="Dispatch.html" class="nav-link">Dispatch</a>
         <button>Summary</button>
 
         <div class="dropdown">
@@ -56,7 +56,6 @@
     <div class="field">
       <label>Branch</label>
       <select id="branchSelect">
-        <option value="">-- Select Branch --</option>
         <option value="JAMNAGAR">JAMNAGAR</option>
         <option value="DARED">DARED</option>
         <option value="KOLKATA">KOLKATA</option>
