Add select button to index.html

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <option value="DELHI">DELHI</option>
       </select>
     </div>
+    <button class="select-btn">Select</button>
   </div>
 </section>
 
