Refactor booking.html for improved sections

--- a/booking.html
+++ b/booking.html
@@ -1,220 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Booking</title>
-<link rel="stylesheet" href="booking.css">
+    <meta charset="UTF-8">
+    <title>Booking</title>
+    <link rel="stylesheet" href="booking.css">
 </head>
 <body>
-<div class="app">
+    <div class="app">
 
-  <!-- Topbar -->
-  <header class="topbar standalone">
-    <div class="logo">RC</div>
-    <div class="title">Booking Page</div>
-  </header>
+        <!-- Topbar -->
+        <header class="topbar standalone">
+            <div class="logo">RC</div>
+            <div class="title">Booking Page</div>
+        </header>
 
-
-  <!-- Booking form -->
-  <div class="booking-body">
+        <!-- Booking form -->
+        <div class="booking-body">
 
     <!-- Left column -->
     <div class="col left">
-      <div class="row">
-        <label>Branch From</label>
-        <input type="text" id="branchFrom" readonly>
-      </div>
-      <div class="row small-gap">
-        <label>Branch To</label>
-          <select id="branchTo">
-            <option value="">-- Select Branch --</option>
-            <option value="JAMNAGAR">JAMNAGAR</option>
-            <option value="DARED">DARED</option>
-            <option value="KOLKATA">KOLKATA</option>
-            <option value="MUMBAI">MUMBAI</option>
-            <option value="DELHI">DELHI</option>
-          </select>
-      </div>
+        <div class="row">
+            <label>Branch From</label>
+            <input type="text" id="branchFrom" readonly>
+        </div>
+        <div class="row small-gap">
+            <label>Branch To</label>
+            <select id="branchTo">
+                <option value="">-- Select Branch --</option>
+                <option value="JAMNAGAR">JAMNAGAR</option>
+                <option value="DARED">DARED</option>
+                <option value="KOLKATA">KOLKATA</option>
+                <option value="MUMBAI">MUMBAI</option>
+                <option value="DELHI">DELHI</option>
+            </select>
+        </div>
+        <div class="big-gap"></div>
+        <div class="row">
+            <label>B-Pay Mode</label>
+            <select id="payMode">
+                <option value="TO PAY">To Pay</option>
+                <option value="PAID">Paid</option>
+                <option value="ACCOUNT">Account</option>
+            </select>
+        </div>
+        <div class="row">
+            <label>Sender / C</label>
+            <input type="text" id="sender">
+        </div>
+        <div class="row">
+            <label>Receiver</label>
+            <input type="text" id="receiver">
+        </div>
+        <div class="row">
+            <label>Content</label>
+            <input type="text" id="content">
+        </div>
+        <div class="row">
+            <label>Packages</label>
+            <input type="number" class="small" id="packages">
+        </div>
+        <div class="row">
+            <label>Weight in KG</label>
+            <input type="number" class="small" id="weight">
+        </div>
+        <div class="row">
+            <label>Reminder</label>
+            <input type="text" id="reminder">
+        </div>
 
-      <div class="big-gap"></div>
-      <div class="row">
-        <label>B-Pay Mode</label>
-        <select id="payMode">
-          <option value="TO PAY">To Pay</option>
-          <option value="PAID">Paid</option>
-          <option value="ACCOUNT">Account</option>
-        </select>
-      </div>
-
-      <div class="row">
-        <label>Sender / C</label>
-        <input type="text" id="sender">
-      </div>
-      <div class="row">
-        <label>Receiver</label>
-        <input type="text" id="receiver">
-      </div>
-      <div class="row">
-        <label>Content</label>
-        <input type="text" id="content">
-      </div>
-      <div class="row">
-        <label>Packages</label>
-        <input type="number" class="small" id="packages">
-      </div>
-      <div class="row">
-        <label>Weight in KG</label>
-        <input type="number" class="small" id="weight">
-      </div>
-      <div class="row">
-        <label>Reminder</label>
-        <input type="text" id="reminder">
-      </div>
+        <!-- Dispatch section moved here -->
+        <div class="dispatch-section">
+            <div class="dispatch-title">DISPATCH</div>
+            <div class="row">
+                <label>Memo No</label>
+                <input type="text" id="dispatchMemo">
+            </div>
+            <div class="row">
+                <label>Dispatch Date</label>
+                <input type="date" class="small" id="dispatchDate">
+            </div>
+            <div class="row">
+                <label>Vehicle No</label>
+                <input type="text" id="vehicleNo">
+            </div>
+        </div>
     </div>
 
     <!-- Middle column -->
     <div class="col middle">
-      <div class="row tight">
-        <label>Pickup From</label>
-        <input type="text" id="pickupFrom">
-      </div>
-      <div class="row tight">
-        <label>Delivery To</label>
-        <input type="text" id="deliveryTo">
-      </div>
-      <div class="big-gap"></div>
-      <div class="row">
-        <label>Mobile No.</label>
-        <input type="text" id="mobile">
-      </div>
-      <div class="row">
-        <label>PKG Detail</label>
-        <input type="text" id="pkgDetail">
-      </div>
+        <div class="row tight">
+            <label>Pickup From</label>
+            <input type="text" id="pickupFrom">
+        </div>
+        <div class="row tight">
+            <label>Delivery To</label>
+            <input type="text" id="deliveryTo">
+        </div>
+        <div class="big-gap"></div>
+        <div class="row">
+            <label>Mobile No.</label>
+            <input type="text" id="mobile">
+        </div>
+        <div class="row">
+            <label>PKG Detail</label>
+            <input type="text" id="pkgDetail">
+        </div>
     </div>
 
     <!-- Right column -->
     <div class="col right">
-      <div class="row">
-        <label>Date</label>
-        <input type="date" class="small" id="bookingDate">
-      </div>
-      <div class="row">
-        <label>L. R. No</label>
-        <input type="text" id="lrNo">
-      </div>
-      <div class="fee-box">
-        <div class="fee-title">Booking Fee</div>
-        <div class="row freight-row">
-          <label>Freight</label>
-          <div class="freight-inputs">
-            <input type="number" class="small" id="freight">
-            <input type="number" class="tiny" id="freightExtra">
-          </div>
-        </div>
+        <div class="right-scroll">
+            <div class="row">
+                <label>Date</label>
+                <input type="date" class="small" id="bookingDate">
+            </div>
+            <div class="row">
+                <label>L. R. No</label>
+                <input type="text" id="lrNo">
+            </div>
+            <div class="fee-box">
+                <div class="fee-title">Booking Fee</div>
+                <div class="row freight-row">
+                    <label>Freight</label>
+                    <div class="freight-inputs">
+                        <input type="number" class="small" id="freight">
+                        <input type="number" class="tiny" id="freightExtra">
+                    </div>
+                </div>
+                <div class="row">
+                    <label>Door del</label>
+                    <input type="number" id="doorDelivery">
+                </div>
+                <div class="row">
+                    <label>Total</label>
+                    <input type="number" id="total">
+                </div>
+            </div>
 
-        <div class="row">
-          <label>Door del</label>
-          <input type="number" id="doorDelivery">
+            <!-- Extra charges moved here -->
+            <div id="extraChargesWrapper">
+                <div id="extraChargesContainer">
+                    <div class="row extra-row">
+                        <label>Extra Charges 1</label>
+                        <input type="text" name="extraCharges">
+                        <button type="button" class="removeExtra">✕</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <label></label>
+                    <button type="button" id="addExtraCharge">+</button>
+                </div>
+            </div>
+
+            <!-- Extra margin at bottom -->
+            <div style="height: 20px;"></div>
         </div>
-        <div class="row">
-          <label>Total</label>
-          <input type="number" id="total">
-        </div>
-      </div>
     </div>
-
-      <!-- Dispatch section -->
-      <div class="dispatch-section">
-        <div class="dispatch-title">DISPATCH</div>
-
-        <div class="row">
-          <label>Memo No</label>
-          <input type="text" id="dispatchMemo">
-        </div>
-
-        <div class="row">
-          <label>Dispatch Date</label>
-          <input type="date" class="small" id="dispatchDate">
-        </div>
-
-        <div class="row">
-          <label>Vehicle No</label>
-          <input type="text" id="vehicleNo">
-        </div>
-      </div>
-
-  </div>
-
-  <!-- Action buttons -->
-  <div class="actions">
-  <button id="btnNew">Add / New</button>
-    <button id="btnEdit">Edit</button>
-    <button id="btnSave">Save</button>
-    <button id="btnDelete">Delete</button>
-    <button id="btnFind">Find</button>
-    <button id="btnPreview">Preview</button>
-    <button id="btnPrint">Print</button>
-  </div>
-
-
-
 </div>
 
-<!-- PRINT LAYOUT -->
-<div id="printArea" style="display:none">
-  <div class="print-page">
-    <div class="receipt" id="receiptLeft"></div>
-    <div class="receipt" id="receiptRight"></div>
-  </div>
-</div>
 
-<!-- ===== Receipt Template ===== -->
-<template id="receiptTemplate">
-  <div class="receipt-header">
-    <div class="logo">RC</div>
-    <div class="meta">
-      <div>Date : <b data-booking-date></b></div>
-      <div>Rcpt.No : <b data-lr-no></b></div>
+        <!-- Action buttons -->
+        <div class="actions">
+            <button id="btnNew">Add / New</button>
+            <button id="btnEdit">Edit</button>
+            <button id="btnSave">Save</button>
+            <button id="btnDelete">Delete</button>
+            <button id="btnFind">Find</button>
+            <button id="btnPreview">Preview</button>
+            <button id="btnPrint">Print</button>
+        </div>
+
     </div>
-  </div>
 
-  <div class="route" data-route></div>
-
-  <div class="field"><span>Sender :</span> <span data-sender></span></div>
-  <div class="field"><span>Receiver :</span> <span data-receiver></span></div>
-  <div class="field"><span>Contact :</span> <span data-mobile></span></div>
-  <div class="field"><span>Item :</span> <span data-content></span></div>
-  <div class="field"><span>Packing :</span> <span data-pkg></span></div>
-  <div class="field"><span>Parcel :</span> <span data-packages></span></div>
-  <div class="field"><span>Weight :</span> <span data-weight></span></div>
-
-  <div class="to-pay" data-total></div>
-  <div class="signature">Receiver's Signature</div>
-</template>
-
-<!-- ===== Find Popup Template ===== -->
-<template id="findPopupTemplate">
-  <div id="previewOverlay" class="overlay">
-    <div class="popup find-popup">
-      <h3>Find Booking</h3>
-
-      <label>LR No</label>
-      <input type="text" id="findLR">
-
-      <label>Available LR Numbers</label>
-      <select id="lrList">
-        <option value="">-- Select LR --</option>
-      </select>
-
-      <div class="popup-actions">
-        <button id="findCancel">Cancel</button>
-        <button id="findLoad">Load</button>
-      </div>
+    <!-- PRINT LAYOUT -->
+    <div id="printArea" style="display:none">
+        <div class="print-page">
+            <div class="receipt" id="receiptLeft"></div>
+            <div class="receipt" id="receiptRight"></div>
+        </div>
     </div>
-  </div>
-</template>
 
-<script src="app.js"></script>
+    <!-- ===== Receipt Template ===== -->
+    <template id="receiptTemplate">
+        <div class="receipt-header">
+            <div class="logo">RC</div>
+            <div class="meta">
+                <div>Date : <b data-booking-date></b></div>
+                <div>Rcpt.No : <b data-lr-no></b></div>
+            </div>
+        </div>
+        <div class="route" data-route></div>
+        <div class="field"><span>Sender :</span> <span data-sender></span></div>
+        <div class="field"><span>Receiver :</span> <span data-receiver></span></div>
+        <div class="field"><span>Contact :</span> <span data-mobile></span></div>
+        <div class="field"><span>Item :</span> <span data-content></span></div>
+        <div class="field"><span>Packing :</span> <span data-pkg></span></div>
+        <div class="field"><span>Parcel :</span> <span data-packages></span></div>
+        <div class="field"><span>Weight :</span> <span data-weight></span></div>
+        <div class="to-pay" data-total></div>
+        <div class="signature">Receiver's Signature</div>
+    </template>
+
+    <!-- ===== Find Popup Template ===== -->
+    <template id="findPopupTemplate">
+        <div id="previewOverlay" class="overlay">
+            <div class="popup find-popup">
+                <h3>Find Booking</h3>
+                <label>LR No</label>
+                <input type="text" id="findLR">
+                <label>Available LR Numbers</label>
+                <select id="lrList">
+                    <option value="">-- Select LR --</option>
+                </select>
+                <div class="popup-actions">
+                    <button id="findCancel">Cancel</button>
+                    <button id="findLoad">Load</button>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    <script src="app.js"></script>
 </body>
 </html>
