Refactor booking form layout and buttons

--- a/booking.html
+++ b/booking.html
@@ -131,27 +131,22 @@
                     <label>Door del</label>
                     <input type="number" id="doorDelivery">
                 </div>
-                <div class="row">
-                    <label>Total</label>
-                    <input type="number" id="total">
-                </div>
-            </div>
-
-            <!-- Extra charges moved here -->
+                            <!-- Extra charges -->
             <div id="extraChargesWrapper">
                 <div id="extraChargesContainer">
                     <div class="row extra-row">
                         <label>Extra Charges 1</label>
                         <input type="text" name="extraCharges">
-                        <button type="button" class="removeExtra">✕</button>
+                        <button type="button" class="addExtraCharge">+</button>
+                        <button type="button" class="removeExtra">x</button>
                     </div>
                 </div>
+            </div>
                 <div class="row">
-                    <label></label>
-                    <button type="button" id="addExtraCharge">+</button>
+                    <label>Total</label>
+                    <input type="number" id="total">
                 </div>
             </div>
-
             <!-- Extra margin at bottom -->
             <div style="height: 20px;"></div>
         </div>
