--- a/booking.html
+++ b/booking.html
@@ -131,17 +131,14 @@
                     <label>Door del</label>
                     <input type="number" id="doorDelivery">
                 </div>
-                            <!-- Extra charges -->
-            <div id="extraChargesWrapper">
-                <div id="extraChargesContainer">
-                    <div class="row extra-row">
-                        <label>Extra Charges 1</label>
-                        <input type="text" name="extraCharges">
-                        <button type="button" class="addExtraCharge">+</button>
-                        <button type="button" class="removeExtra">x</button>
-                    </div>
+                <div class="row">
+                    <label>Extra Charges 1</label>
+                    <input type="text" id="extraCharges1">
                 </div>
-            </div>
+                <div class="row">
+                    <label>Extra Charges 2</label>
+                    <input type="text" id="extraCharges2">
+                </div>
                 <div class="row">
                     <label>Total</label>
                     <input type="number" id="total">
