--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div class="field">
       <label>Branch</label>
       <select id="branchSelect">
+        <option value="BETA">BETA</option>
         <option value="JAMNAGAR">JAMNAGAR</option>
         <option value="DARED">DARED</option>
         <option value="KOLKATA">KOLKATA</option>
