Update dispatch loading to save only vehicle LR details

--- a/Dispatch.html
+++ b/Dispatch.html
@@ -164,7 +164,7 @@
             <div class="row remark">
                 <label>REMARK</label>
                 <input type="text" id="remark">
-                <button class="loading-btn" type="button">LOADING</button>
+                <button class="loading-btn" id="loadingBtn" type="button">LOADING</button>
             </div>
         </div>
 
